Add parent to project.

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
   <groupId>br.com.teste</groupId>
   <artifactId>spring-test</artifactId>
   <version>1.0-SNAPSHOT</version>
+
+  <parent>
+    <groupId>com.test</groupId>
+    <artifactId>pom-master</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
+
   <build>
     <plugins>
       <plugin>
