--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>br.com.teste</groupId>
   <artifactId>spring-test</artifactId>
-  <version>1.0.2_RC01-SNAPSHOT</version>
+  <version>1.0.2_RC01</version>
 
   <parent>
     <groupId>com.test</groupId>
