--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,21 @@
   </parent>
 
   <build>
+    <pluginManagement>
+      <groupId>external.atlassian.jgitflow</groupId>
+      <artifactId>jgitflow-maven-plugin</artifactId>
+      <version>1.0-m4.3</version>
+      <configuration>
+        <pushReleases>true</pushReleases>
+        <flowInitContext>
+          <masterBranchName>master</masterBranchName>
+          <developBranchName>development</developBranchName>
+          <featureBranchPrefix>feature-</featureBranchPrefix>
+          <releaseBranchPrefix>release-</releaseBranchPrefix>
+          <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
+        </flowInitContext>
+      </configuration>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
