--- a/pom.xml
+++ b/pom.xml
@@ -13,21 +13,23 @@
 
   <build>
     <pluginManagement>
-      <plugin>
-        <groupId>external.atlassian.jgitflow</groupId>
-        <artifactId>jgitflow-maven-plugin</artifactId>
-        <version>1.0-m4.3</version>
-        <configuration>
-          <pushReleases>true</pushReleases>
-          <flowInitContext>
-            <masterBranchName>master</masterBranchName>
-            <developBranchName>development</developBranchName>
-            <featureBranchPrefix>feature-</featureBranchPrefix>
-            <releaseBranchPrefix>release-</releaseBranchPrefix>
-            <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
-          </flowInitContext>
-        </configuration>
-      </plugin>
+      <plugins>
+        <plugin>
+          <groupId>external.atlassian.jgitflow</groupId>
+          <artifactId>jgitflow-maven-plugin</artifactId>
+          <version>1.0-m4.3</version>
+          <configuration>
+            <pushReleases>true</pushReleases>
+            <flowInitContext>
+              <masterBranchName>master</masterBranchName>
+              <developBranchName>development</developBranchName>
+              <featureBranchPrefix>feature-</featureBranchPrefix>
+              <releaseBranchPrefix>release-</releaseBranchPrefix>
+              <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
+            </flowInitContext>
+          </configuration>
+        </plugin>
+      </plugins>
     </pluginManagement>
     <plugins>
       <plugin>
